--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ table{
 
 #azul-1{
     width: 45%;
-    background-color: #6bc1ff;
+    background-color: #c418ad;
 }
 
 #amarelo{
@@ -32,7 +32,7 @@ table{
 
 #azul-2{
     width: 8%;
-    background-color: #6bc1ff;
+    background-color: #b62b9f;
 }
 
 #td-7{
