--- a/style.css
+++ b/style.css
@@ -27,12 +27,12 @@ table{
 
 #laranja{
     width: 5%;
-    background-color:#ff9900;
+    background-color:#eb1d1d;
 }
 
 #azul-2{
     width: 8%;
-    background-color: #b62b9f;
+    background-color: #ff2525;
 }
 
 #td-7{
@@ -44,7 +44,7 @@ table{
 }
 
 .rosinha{
-    background-color: #ff9a9a;
+    background-color: #4dc409;
 }
 
 .img1{
