--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ table{
 
 #azul-1{
     width: 45%;
-    background-color: #c418ad;
+    background-color: #ff811b;
 }
 
 #amarelo{
@@ -27,7 +27,7 @@ table{
 
 #laranja{
     width: 5%;
-    background-color:#eb1d1d;
+    background-color:#6f1fd6;
 }
 
 #azul-2{
